build: edited readme and moved error response to openapi
