# src/main/java/com/vass/challenge/catalog/infrastructure/api/rest/exceptions/ErrorResponse.java
@@ -1,6 +1,0 @@
-package com.vass.challenge.catalog.infrastructure.api.rest.exceptions;
-
-
-public record ErrorResponse(String code, String message) {
-
-}
